<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Moovy</string>
    <string name="most_popular">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Upcoming</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search for Movie</string>

    <string name="adult_content">Show Adult Content</string>
    <string name="adult_content_summary">If this option is selected, movies that includes adult content will be shown in the application. </string>

    <string name="language_preference">Language</string>

    <string name="entry_count_preference">Number of Entries</string>
    <string name="entry_count_preference_summary">This number descriribes how many movie entry will be shown in the main page.</string>

    <string-array name="language_options">
        <item>"English"</item>
        <item>"Turkish"</item>
    </string-array>
    <string-array name="language_options_values">
        <item>"en-US"</item>
        <item>"tr"</item>
    </string-array>

    <string-array name="entry_count_options">
        <item>"20"</item>
        <item>"40"</item>
        <item>"60"</item>
        <item>"80"</item>
        <item>"100"</item>
    </string-array>
    <string-array name="entry_count_options_values">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </string-array>


    <string name="release_date">Release Date</string>
    <string name="location">Location</string>
    <string name="cast">Cast</string>
    <string name="storyline">Storyline</string>
    <string name="reviews">Reviews</string>
    <string name="there_is_no_review_for_this_movie_yet">There is no review for this movie yet.</string>
    <string name="favourites">Favourites</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_place">Birth Place</string>
    <string name="biography">Biography</string>
    <string name="credit">Credit</string>
    <string name="read_more">Read More</string>
    <string name="action_favourites">Favourites</string>
    <string name="show_original_title">Show Original Title</string>
    <string name="show_original_title_summary">If this option is selected, the original title of the movie will be shown in the main page.</string>


    <string-array name="sort_types">
        <item>Popularity</item>
        <item>Score</item>
        <item>Title</item>
    </string-array>

    <string name="you_should_enter_query">You should enter a query</string>
    <string name="name_of_movie">Name Of Movie</string>
    <string name="quick_search">Quick Search</string>
    <string name="year">Year</string>
    <string name="minimum_score">Minimum Score</string>
    <string name="genre">Genre</string>
    <string name="sort_by">Sort by</string>
    <string name="detailed_search">Detailed Search</string>
    <string name="make_sure_internet">Make sure of your internet connection</string>
    <string name="fetch_movies">Fetching Information</string>

    <string name="SearchActivityAppBar">Search</string>
    <string name="SearchResultsActivityAppBar">Search Results</string>
    <string name="FavoritesAppBar">Favourites</string>
    <string name="FullReviewAppbar">Full Review</string>

</resources>
