<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_marginVertical="24dp"
    android:orientation="horizontal"
    android:layout_marginHorizontal="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <EditText
        android:id="@+id/nameOfMovieSearch"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
    <Button
        android:id="@+id/quickSearchButton"
        android:layout_marginEnd="8dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_search"/>
    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="24dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <EditText
            android:id="@+id/yearOfMovieSearch"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:textSize="18sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/minimum_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <EditText
        android:id="@+id/minimumScore"
       android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp">

        <TextView
            android:textSize="18sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerOfGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerOfSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
    <Button
        android:id="@+id/detailedSearchButton"
        android:layout_marginEnd="8dp"
        android:layout_gravity="right"
        android:layout_marginVertical="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_search"/>


</LinearLayout>