<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:nestedScrollingEnabled="true"


    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PeopleDetailActivity"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/smallPoster"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/moovy_orange_background" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/movieTitleDetail"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"

                    />
                <TextView
                    android:id="@+id/releaseDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/release_date"
                    style="@style/Base.TextAppearance.AppCompat"
                    />

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    />
                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/location"
                    style="@style/Base.TextAppearance.AppCompat"
                    />
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"

                    />


            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Base.TextAppearance.AppCompat.Title"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvCastOfMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/storylineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storyline"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="8dp"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/storyLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:maxHeight="180dp"
                   >

                </TextView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
            <TextView
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Base.TextAppearance.AppCompat.Title"/>

        <include layout="@layout/reviews_recyclerview" />

        <TextView
            android:id="@+id/isThereReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/there_is_no_review_for_this_movie_yet"
            android:visibility="invisible"
            android:layout_margin="8dp"/>



    </LinearLayout>
</ScrollView>
</LinearLayout>