<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PeopleDetailActivity"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayoutPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay"

        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarPeople"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >

        <ImageView
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:src="@drawable/moovy_logo"
            android:onClick="clickLogoEvent"/>
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
          android:id="@+id/peoplePoster"
          android:layout_width="@dimen/poster_width"
          android:layout_height="@dimen/poster_height"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:scaleType="centerCrop"
          app:srcCompat="@drawable/moovy_orange_background" />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <TextView
              android:id="@+id/peopleName"
              style="@style/Base.TextAppearance.AppCompat.Title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="8dp"

             />
          <TextView
              android:id="@+id/birthDayText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="8dp"
              android:text="@string/birth_date"
              style="@style/Base.TextAppearance.AppCompat"
              />

          <TextView
              android:id="@+id/birthDay"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="8dp"

               />
          <TextView
              android:id="@+id/birthPlaceText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="20dp"
              android:layout_marginEnd="8dp"
              android:text="@string/birth_place"
              style="@style/Base.TextAppearance.AppCompat"
             />
          <TextView
              android:id="@+id/birthPlace"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="8dp"

              />


      </LinearLayout>
  </LinearLayout>
    <TextView
        android:id="@+id/roles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        style="@style/Base.TextAppearance.AppCompat.Title"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMoviesOfPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biography"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_margin="8dp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/short_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:maxHeight="180dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>








</LinearLayout>
</ScrollView>

